if(APPLE)
add_definitions(-DSCALE=2 -DWHITE_ON_BLACK -DXACE_VERSION=\"0.5\" -I/usr/local/include)
target_link_libraries(xace -L/usr/local/lib X11 Xext)
else()
add_definitions(-DSCALE=2 -DWHITE_ON_BLACK -DXACE_VERSION=\"0.5\")
target_link_libraries(xace X11 Xext)
endif()
add_executable(xace xmain.c z80.c tape.c keyboard.c spooler.c)
install(TARGETS xace DESTINATION bin)
